# Ros-projects

./: README.md
EXERCISE_1/agitr_chapter3/src/: pubvel.cpp
EXERCISE_2/agitr_chapter8_plus/: CMakeLists.txt
EXERCISE_2/agitr_chapter8_plus/launch/: Exercise2.launch
EXERCISE_2/agitr_chapter8_plus/src/: improved_pubvel_toggle.cpp  pubvel_toggle_plus.cpp  spawn_turtle_plus.cpp
EXERCISE_2/agitr_chapter8_plus/srv/: Changevelocity.srv
EXERCISE_3/mastering_ros_robot_description_pkg/launch/: view_arm.launch
EXERCISE_3/rviz_marker_demo/: rviz_marker_demo.rviz
EXERCISE_3/rviz_marker_demo/launch/: rviz_marker_demo.launch
EXERCISE_3/rviz_marker_demo/src/: rviz_node.cpp
EXERCISE_3/urdf_tutorial/: CMakeLists.txt
EXERCISE_3/urdf_tutorial/launch/: urdf_tutorial.launch
EXERCISE_3/urdf_tutorial/src/: urdf_tutorial_a.cpp  urdf_tutorial_arm.cpp  urdf_tutorial_arm2.cpp  urdf_tutorial_arm3.cpp  urdf_tutorial_b.cpp
EXERCISE_3/urdf_tutorial/srv/: changescale.srv
EXERCISE_4/actions_tutorial/: CMakeLists.txt  package.xml
EXERCISE_4/actions_tutorial/action/: pantilt_action.action
EXERCISE_4/actions_tutorial/launch/: actions_tutorial.launch
EXERCISE_4/actions_tutorial/src/: pantilt_action_client.cpp  pantilt_action_server.cpp
EXERCISE_4/mastering_ros_robot_description_pkg/: urdf_arm_markers.rviz
EXERCISE_4/mastering_ros_robot_description_pkg/launch/: view_demo.launch
EXERCISE_4/mastering_ros_robot_description_pkg/urdf/: seven_dof_arm.xacro
EXERCISE_5/gazebo_sensors_tutorial/: CMakeLists.txt  transformacions
EXERCISE_5/gazebo_sensors_tutorial/launch/: aruco_single.launch  camera_aruco_cube-2.rviz  camera_aruco_cube_rviz-2.launch  camera_chess_cube_rviz-2.launch  camera_chess_gazebo.launch  camera_coke.rviz  camera_coke_gazebo.launch  camera_coke_rviz.launch  camera_gazebo.launch  kinect_arm.rviz  kinect_arm_rviz.launch  kinect_coke_gazebo.launch  kinect_coke_rviz.launch  one_realsense_chessboard.rviz  one_realsense_chessboard_gazebo_spawn.launch  one_realsense_chessboard_rviz.launch  two_realsense_chessboard.rviz  two_realsense_chessboard_gazebo_spawn.launch  two_realsense_chessboard_rviz.launch
EXERCISE_5/gazebo_sensors_tutorial/models/camera-plugin/: model-1_2.sdf  model-1_3.sdf  model-1_4.sdf  model.sdf
EXERCISE_5/gazebo_sensors_tutorial/models/chessboard2/: chessboard2.sdf
EXERCISE_5/gazebo_sensors_tutorial/src/: aruco_frames_detection.cpp
EXERCISE_5/gazebo_sensors_tutorial/urdf/: aruco_seven_dof_arm_with_rgbd.xacro  chessboard_one_camera_cell.urdf.xacro
EXERCISE_5/gazebo_sensors_tutorial/worlds/: camera.world  camera_coke.world  chess_world.world  kinect_arm_aruco_cube.world  kinect_coke.world
EXERCISE_6/gazebo_control_tutorial/: CMakeLists.txt  README  package.xml
EXERCISE_6/gazebo_control_tutorial/config/: seven_dof_arm_gazebo_joint_position_full.yaml
EXERCISE_6/gazebo_control_tutorial/launch/: aruco_seven_dof_arm_with_rgbd_world.launch  kinect_arm_aruco_cube.rviz  kinect_arm_aruco_cube_b.rviz  kinect_arm_aruco_cube_rviz.launch  kinect_arm_aruco_cube_rviz_b.launch
EXERCISE_6/gazebo_control_tutorial/src/: pubcontrols.cpp
EXERCISE_6/gazebo_control_tutorial/worlds/: kinect_coke.world
project/leire_ane/: CMakeLists.txt  package.xml
project/leire_ane/include/: chessboard.h
project/leire_ane/launch/: collision_fee.launch  two_realsense_chessboard_rviz.launch
project/leire_ane/src/: PlanningSensing.cpp  aruco_frames_detection.cpp  movement.cpp
project/leire_ane/srv/: EnroquePlay.srv  MovePiece.srv  Pickup.srv  ThrowPiece.srv  Trajectory.srv  TrajectorySensing.srv
