<?xml version="1.0"?>
<package format="2">
  <name>leire_ane</name>
  <version>0.0.0</version>
  <description>Intel RealSense R200 Gazebo plugin package</description>
  <maintainer email="missrisalaheddine@gmail.com">Salah-Eddine Missri</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>gazebo_ros</depend>
  <depend>aruco_ros</depend>
  <depend>roscpp</depend>
  <depend>rviz</depend>
  <depend>camera_info_manager</depend>
  <exec_depend>depth_image_proc</exec_depend>
  <depend>ff</depend>
  <depend>ur3ik</depend>
  <depend>urdf</depend>
  <depend>xacro</depend>
  <depend>ur_description</depend>
  <depend>robotiq_2f_model</depend>
<depend>chesslab_setup</depend>
<!--<depend>chesslab_setup</depend>-->

  <export>
    <gazebo_ros
      plugin_path="${prefix}/lib"
      gazebo_media_path="${prefix}"
      gazebo_model_path="${prefix}/models"
      />
  </export>
</package>
